# ml_pipeline

./: .env.example  .gitignore  Makefile  pyproject.toml  requirements.txt
ml_pipeline/: __init__.py  batch.py  cli.py  data.py  runner.py  train.py
ml_pipeline/config/: __init__.py  data.toml  model.toml  training.toml
ml_pipeline/data/: dataset.py  spark.py
ml_pipeline/notebooks/: features.ipynb  main.ipynb
ml_pipeline/training/: __init__.py  pipeline.py  runner.py
src/data/: dataset.py
src/model/: cnn.py
test/: .env.test  conftest.py  test_cnn.py  test_inputs.py  test_pipeline.py
