[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml_pipeline"
version = "0.1.0"
authors = [
    {name = "publicmatt", email = "git@publicmatt.com"},
]
description = "A minimal viable pytorch training pipeline."
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "click==8.1.7",
    "einops==0.7.0",
    "matplotlib==3.8.4",
    "numpy==1.26.4",
    "pytest==8.1.1",
    "python-dotenv==1.0.1",
    "requests==2.31.0",
    "torch==2.2.2",
    "tqdm==4.66.2",
    "wandb==0.16.6",
]

[project.urls]
homepage = "https://example.com/my_project"
repository = "https://example.com/my_project/repo"
documentation = "https://example.com/my_project/docs"

[tool.setuptools]
packages = ["ml_pipeline"]
