[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml_pipeline"
version = "0.1.0"
authors = [
    {name = "publicmatt", email = "git@publicmatt.com"},
]
description = "A minimal viable pytorch training pipeline."
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "click==8.1.7",
    "einops==0.7.0",
    "matplotlib==3.8.4",
    "numpy==1.26.4",
    "pytest==8.1.1",
    "pytest-cov==5.0.0",
    "python-dotenv==1.0.1",
    "requests==2.31.0",
    "torch==2.2.2",
    "torchvision=0.17.2",
    "tqdm==4.66.2",
    "wandb==0.16.6",
    "python-configuration[toml]",
    "pandas==2.2.1",
    "notebook==7.1.2",
]

[project.urls]
homepage = "https://example.com/my_project"
repository = "https://example.com/my_project/repo"
documentation = "https://example.com/my_project/docs"

[tool.setuptools]
packages = ["ml_pipeline"]

[tool.pytest.ini_options]
# Run tests in parallel using pytest-xdist
addopts = "--cov=ml_pipeline --cov-report=term"
# Specify the paths to look for tests
testpaths = [
    "test",
]
# Set default Python classes, functions, and methods to consider as tests
python_files = [
    "test_*.py",
    "test*.py",
    "*_test.py",
]
python_classes = [
    "Test*",
    "*Test",
    "*Tests",
    "*TestCase",
]
python_functions = [
    "test_*",
    "*_test",
]

# Configure markers (custom or otherwise)
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "online: marks tests that require internet access",
]
